--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
-
+/* responsive design */
+@media screen and(max-width:430px) {}
+@media screen and(max-width:768px) {}
+@media screen and(max-width:990px) {}
