--- a/src/components/BrandProtectionHome/BrandProtectionHome.css
+++ b/src/components/BrandProtectionHome/BrandProtectionHome.css
@@ -1,3 +1,9 @@
-.brand_bg{
-    
+.brand_protection {
+    padding-top: 126px;
+    padding-bottom: 110px;
+    background-image: url(../../assets/brandProtection.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 25px;
 }
