--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,6 @@ a {
   color: #0C1518;
 }
 
-
 /* fonts */
 
 .fs_14 {
@@ -122,7 +121,6 @@ button {
   border: none;
 }
 
-
 /* navbar */
 .contact_btn {
   border-radius: 11px;
@@ -137,7 +135,6 @@ button {
   border-radius: 11px;
   background: #FDD74F;
   padding: 13px 62px 12px 61px;
-
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -152,3 +149,7 @@ button {
 }
 
 /* navbar */
+.section_padding {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
