--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,9 @@ a {
 .mb_50 {
   margin-bottom: 50px !important;
 }
-
+.mt_140{
+  margin-top: 140px !important;
+}
 /* buttons */
 button {
   cursor: pointer !important;
