--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -1,6 +1,6 @@
 .img_about_2 {
     border-radius: 11px;
-    border: 8px solid #FFF;
+    /* border: 8px solid #FFF; */
     background: url(<path-to-image>), lightgray 50% / cover no-repeat, #FFF;
 }
 
@@ -9,4 +9,58 @@
     margin-top: 140px;
     padding-top: 120px;
     padding-bottom: 150px;
+}
+
+.about_wrapper3 {
+    background-image: url('../../assets/section4_about_frame.png');
+    background-repeat: no-repeat;
+    margin-top: 140px;
+    padding-top: 120px;
+    padding-bottom: 150px;
+}
+
+.sec1_about p {
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+
+}
+
+.sec1_about small {
+    color: #0C1518;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.mb_40 {
+    margin-bottom: 40px;
+}
+
+.mt_40 {
+    margin-top: 40px;
+}
+
+/* section 2 */
+.about_text2 {
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+}
+
+/* sec 3 */
+.sec3_about h2 {
+    font-style: normal;
+    font-weight: 700 !important;
+    line-height: 130%;
+}
+
+/* sec 4 */
+.sec4_about {
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
 }
