--- a/src/components/BrandProtectionHome/BrandProtectionHome.css
+++ b/src/components/BrandProtectionHome/BrandProtectionHome.css
@@ -7,3 +7,9 @@
     background-size: cover;
     border-radius: 25px;
 }
+
+@media(max-width: 992px){
+    .brand_protection{
+        padding: 50px;
+    }
+}
