--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -1,4 +1,4 @@
-.contact_us{
+.contact_us {
     background-image: url(../../assets/contact_us_shape.svg);
     background-repeat: no-repeat;
     background-position: right bottom;
@@ -11,27 +11,61 @@
 }
 
 .contact_us .contact_us_wrapper .contact_us_main {
-    background-color: #06194A;
     max-width: 1180px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    border-radius: 45px;
 }
+
+
+@media(max-width: 992px) {
+    .contact_us .contact_us_wrapper .contact_us_main {
+        grid-template-columns: 1fr;
+        background-color: #06194A;
+    }
+}
+
+.contact_us .contact_us_wrapper .contact_us_left img {
+    /* width: 100%; */
+    border-top-left-radius: 45px;
+    border-bottom-left-radius: 45px;
+}
+
+@media(max-width: 992px) {
+    .contact_us .contact_us_wrapper .contact_us_left img {
+        padding-top: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+}
+
 
 .contact_us .contact_us_wrapper .contact_us_right {
-    padding-top: 78px;
-    padding-left: 53px;
-    /* background-color: #06194A; */
+    background-color: #06194A;
+    border-top-right-radius: 45px;
+    border-bottom-right-radius: 45px;
+    padding-top: 30px;
+    padding-left: 50px;
+    padding-right: 27px;
+    /* /* padding-bottom: 18px; */
 }
 
-.contact_us .contact_us_wrapper .contact_us_right form{
+@media(max-width: 992px) {
+    .contact_us .contact_us_wrapper .contact_us_right {
+        background-color: unset;
+        padding: 40px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+}
+
+.contact_us .contact_us_wrapper .contact_us_right form {
     margin-bottom: 20px;
 }
 
 .contact_us .contact_us_wrapper .contact_us_right form input {
-    max-width: 407px;
-    width: 100%;
     height: 45px;
     border-radius: 7px;
     background: #FAFAFA;
@@ -41,7 +75,7 @@
 }
 
 .contact_us .contact_us_wrapper .contact_us_right form textarea {
-    width: 407px;
+    width: 400px;
     height: 88px;
     border: none;
     outline: none;
