pricing section deone

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,9 @@ a {
 .mb_50 {
   margin-bottom: 50px !important;
 }
+.mb_70 {
+  margin-bottom: 70px !important;
+}
 
 .mb_40 {
   margin-bottom: 40px;
