--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,10 +3,29 @@
     font-weight: 800;
     line-height: 130%;
 }
+
 .banner_bg {
     background-color: #151846;
     padding-top: 182px;
     padding-bottom: 281px;
+}
+
+@media(max-width: 992px) {
+    .banner_bg {
+        padding-bottom: 220px;
+    }
+}
+
+@media(max-width: 768px) {
+    .banner_bg {
+        padding-bottom: 180px;
+    }
+}
+
+@media(max-width: 550px) {
+    .banner_bg {
+        padding-bottom: 140px;
+    }
 }
 
 .banner_right {
@@ -17,7 +36,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding:87px 45px;
+    padding: 87px 45px;
     text-align: center;
 }
 
@@ -36,8 +55,9 @@
     border: 1px solid var(--07, #06194A);
     /* margin-bottom: 30px; */
 }
-.banner_right p{
+
+.banner_right p {
     font-style: normal;
-font-weight: 500;
-line-height: normal;
+    font-weight: 500;
+    line-height: normal;
 }
