--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -9,7 +9,13 @@
     padding-top: 182px;
     padding-bottom: 281px;
 }
-
+.banner_p{
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; 
+margin-bottom: 50px;
+}
 @media(max-width: 992px) {
     .banner_bg {
         padding-bottom: 220px;
