--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -17,6 +17,15 @@
     grid-template-columns: 1fr 1fr;
 }
 
+.contact_us_main input,textarea::placeholder {
+    color: #BEBEBE;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 185.714% */
+}
 
 @media(max-width: 992px) {
     .contact_us .contact_us_wrapper .contact_us_main {
