--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,5 @@
 .side_shape {
+    overflow: hidden;
     background-image: url(../../assets/side_shape.svg);
     background-repeat: no-repeat;
     background-position: left bottom;
